--- a/basics/style.css
+++ b/basics/style.css
@@ -9,6 +9,7 @@ body{
     padding-left: 15px;
     padding-right: 15px;
     position: sticky;
+    overflow: hidden;
 }
 
 .navdiv{
@@ -19,13 +20,21 @@ body{
 }
 
 .links li{
-    font-size: 25px;
-    font-weight: bold;
     list-style-type: none;
     display: inline-block;
 }
 .links button{
-    background-color: aqua;
+    font-size: 25px;
+    font-weight: bold;
+    background-color: transparent;
+    border: none;
+    font-size: x-large;
+    padding: 7px;
+    border-radius: 7px;
+
+    &:hover{
+        background-color: rgb(108, 0, 176);
+    }
 }
 li a{
     color: black;
@@ -33,29 +42,40 @@ li a{
     padding-left: 25px;
     padding-right: 25px;
     text-decoration: none;
-
 }
 
 .logo {
-  font-size: 15px;
-  transition: transform 0.2s;   /* smooth enlarge/shrink */
+  font-size: 25px;
+  transition: transform 0.2s;  
+  padding: 0%; 
+  line-height: 10px;
 }
 
 .logo:hover {
-  transform: scale(1.1);        /* looks ~10 % bigger but layout stays put */
+  transform: scale(1.1);        
 }
 
-p{
-    border: 2px solid white; 
-    margin: 0;
-    height: 78vh;               
-    display: flex;               
-    justify-content: center;     
-    align-items: center;         
-    text-align: center;          
+.first{
+    height: 90vh;
+    border: 2px solid white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-#right ul{
-    float: right;
-}
+.pp{
+    height: 20vw;
+    border-radius: 50%;
+    object-fit: cover;     
+    position: absolute;  
+    left: 70vw;          
+    top: 30vh;
+    width: 300px;
+    display: flex;
+    align-items: end;
+    transition: transform 0.2s;
 
+    &:hover{
+        transform: scale(1.1);
+    }
+}
